--- a/overview.html
+++ b/overview.html
@@ -1,9 +1,62 @@
-<h1>Solve Insects Problem</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="presentation.css">
+</head>
+<body>
+    <h1> ✅ Competition overview</h1>
+    <hr class="solid">
+    Many datasets are plagued by bias, but not just fairness related bias. For instance, image datasets, background is a source of bias (example: airplanes in the sky…). Classifiers may be induced to rely on background. So, we designed a dataset with bias. Indeed, the idea was to induce a bias by using the <b>style transfer</b>, to create fake paintings whose style is in correlation with the subject to be recognized.
 
-<p>This is a insects classification problem. The data set contains 5 classes of 10 instances each, where each class refers to a type of insect. </p>
+    <b>STYLE-TRANS-FAIR</b> challenge aims at detecting bias in image data, making sure deep-learning methods do not base classification decisions on the style of an image rather than recognizing the objects or animals. 
 
-<p><b>References and credits:</b>
-<br>Museum of Natural History, Paris (https://www.mnhn.fr/)
-<br>SPIPOLL Science Prject (https://www.spipoll.org/)
-<br>The competition protocol was designed by Isabelle Guyon.
-<br>The starting kit was adapted from an Jupyper notebook designed by Balazs Kegl</a>.
+    <ul>
+        <li>
+            <b>Main goal of this competition</b> : The main goal is about creating a Machine Learning model and train it with the data provided to classify the images into 3 Classes without being biased towards Styles. 
+        </li>
+    </ul>
+    This challenge uses a Dataset from <b>Meta Album</b>. There are <b>5 tasks in the Development phase</b> and <b>5 tasks in the Final Phase</b>. Each task in the dataset consists of <b>360</b> images splited into <b>9 groups</b>. we also have 2 set : the training and test set, where <b>the training set is biased in Style, and the test set is balanced</b>. (You can see the data section to know more about the data and the distribution of the task please).
+
+
+
+    <h1> ✅ Competition Phases</h1>
+    <hr class="solid">
+    This challenge consists of two phases : 
+    <ul>
+        <li>
+            <b>Development Phase</b> : In this phase, Participants can train a model and submit at most <b>5 submissions per day</b> to check the score of your model and to see how good your model is performing.  Once you are satisfied with your performance then you can try the Final Phase. 
+        </li>
+        <li>
+            <b>Final Phase</b> : In this phase you can submit only once so it is advised to do it when you are ready for the final submission.
+        </li>
+    </ul>
+
+    <h1> ✅ Who can take part ?</h1>
+    <hr class="solid">
+    Anyone interested in machine learning and who would like to improve their skills can participate in this competition. So don't miss this opportunity and try your luck.
+
+    <b>Note</b> : No prizes, this is an educational challenge.
+
+    <h1> ✅ Who are we?</h1>
+    <hr class="solid">
+    We are the <b>Fairness National Assembly</b> 😃 composed of :
+    <ul>
+        <li><b>Khuong T.G.H</b></li>
+        <li><b>Quentin Le Tellier</b></li>
+        <li><b>Benedictus Kent</b></li>
+        <li><b>Alex-Razvan</b></li>
+        <li><b>Junior Cedric Tonga</b></li>
+    </ul>
+
+    We are the organizers of this competition under the supervision of some teachers(see references section).
+
+    <h1> ✅ References and credits</h1>
+    <hr class="solid">
+    We also thank the following people for their support and supervision : 
+    <ul>
+        <li><b>Isabelle Guyon, Ihsan Ullah, Sergio and  Birhanu (with the help of Ahmad)</b></li>
+        <li><a href="https://meta-album.github.io/">Meta Album</a></li>
+        <li><a href="https://www.universite-paris-saclay.fr">Université Paris Saclay</a></li>
+    </ul>
+</body>
+</html>
