--- a/rules.html
+++ b/rules.html
@@ -1,9 +1,21 @@
-
-<h1>Rules</h1>
-
-<p>
-Submissions must be made before the end of phase 1.
-You may submit 5 submissions every day and 100 in total.
-</p>
-
-This challenge is for educational purposes only and no prizes are granted. It is governed by the <a href="http://www.causality.inf.ethz.ch/GeneralChalearnContestRuleTerms.html">general ChaLearn contest rules</a>.
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="presentation.css">
+</head>
+<body>
+    <h1> ✅ Rules</h1>
+    <hr class="solid">
+    <ul>
+        <li>
+            Submissions must be made before the end of developpement phase.
+        </li>
+        <li>
+            You may submit <b>5 submissions every day and 100 in total</b>.
+        </li>
+        <li>
+            This challenge is for educational purposes only and no prizes are granted. It is governed by the <a href="http://www.causality.inf.ethz.ch/GeneralChalearnContestRuleTerms.html">general ChaLearn contest rules</a>.
+        </li>
+    </ul>
+</body>
+</html>
