--- a/data.html
+++ b/data.html
@@ -58,6 +58,10 @@
         </li>
     </ul>
 
+    <div class="centered">
+        <img src="https://raw.githubusercontent.com/fnachalearn/public_style-trans-fair/main/demo_image.png" height="300" style="margin-bottom: 5vh;">
+    </div>
+
     Each task in this dataset consits of <b>360 labeled images</b> of insects splitted into <b>9 groups</b> distributed with <b>3 styles and 3 classes</b>.
 
     The 9 groups of images are imbalanced, resulting in bias in the dataset: each class is more represented in one of the 3 styles in order to fool machine learning models which will correlate classes to their corresponding style.
